--- a/FootballScoringSystem/ScoreboardInstructions.resx
+++ b/FootballScoringSystem/ScoreboardInstructions.resx
@@ -57,7 +57,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="configInfoLabel.Text" xml:space="preserve">
+  <data name="Instructions.Text" xml:space="preserve">
     <value>Instructions:
 Press (1) to add score to home team
 Press (2) to remove score from home team
